--- a/arcore-android-sdk/samples/hello_cloudxr_c/app/build.gradle
+++ b/arcore-android-sdk/samples/hello_cloudxr_c/app/build.gradle
@@ -20,13 +20,16 @@ def setVersionName = { ->
 }
 
 android {
-    compileSdkVersion 27
+    buildToolsVersion '28.0.3'
+    ndkVersion '21.4.7075529' // current LTS atm
+
+    compileSdkVersion 28
     defaultConfig {
         applicationId "com.nvidia.ar.hellocloudxr"
 
         // 24 is the minimum since ARCore only works with 24 and higher.
         minSdkVersion 24
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName setVersionName()
 
@@ -82,11 +85,11 @@ repositories {
 
 dependencies {
     // ARCore library
-    implementation 'com.google.ar:core:1.16.0'
-    natives 'com.google.ar:core:1.16.0'
+    implementation 'com.google.ar:core:1.12.0'
+    natives 'com.google.ar:core:1.12.0'
 
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
     implementation 'com.nvidia.CloudXRClient:CloudXR@aar'
 }
 
