--- a/arcore-android-sdk/samples/hello_cloudxr_c/app/src/main/AndroidManifest.xml
+++ b/arcore-android-sdk/samples/hello_cloudxr_c/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
   <uses-feature android:name="android.hardware.microphone" android:required="false" />
 
   <application
-    android:allowBackup="true"
+    android:allowBackup="false"
     android:icon="@drawable/ic_launcher"
     android:label="@string/app_name"
     android:theme="@style/AppTheme"
